Fixed z-index for pfp

--- a/index.css
+++ b/index.css
@@ -110,6 +110,7 @@ body
     height: 100%;
     transform: translate(0%, 50%);
     width: 10vw;
+    z-index: 1;
 }
 #PFP:hover
 {
